Fixed testing.